<resources>
    <string name="app_name">ShopApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_search">Поиск</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_products">Объявления</string>
    <string name="title_message">Сообщения</string>
    <string name="title_profile">Профиль</string>
    <string name="placeholder_text">Text</string>
    <string name="enter">Войти</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="password">Пароль</string>
    <string name="email">Электронная почта</string>
    <string name="name">Имя</string>
    <string name="registration">Регистрация</string>
    <string name="phone_or_mail">Телефон или почта</string>
    <string name="entrance">Вход</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="title_entrance">Вход</string>
    <string name="currency_symbol">₽</string>
    <string name="price_filter_toggle">Price filter toggle</string>
    <string name="error_while_loading_products">Ошибка при загрузке товаров</string>
    <string name="category_computers">Computers</string>
    <string name="category_bags">Bags</string>
    <string name="category_clothing">Clothing</string>
    <string name="category_furniture">Furniture</string>
    <string name="category_footwear">Footwear</string>
    <string name="previous_page">Previous page</string>
    <string name="next_page">Next page</string>
    <string name="try_again">Повторить</string>
    <string name="Buy">Купить</string>
    <string name="title_product">Title of the product\n</string>
    <string name="title_error">Error</string>
    <string name="product_not_found_or_an_error_occurred">Product not found or an error occurred.</string>
    <string name="no_discounted_price_available">No discounted price available</string>
    <string name="we_are_run_out_of_this_item_sorry">We are run out of this item. Sorry!</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="failure_try_again">Не получилось! Попробуйте еще раз</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="password_should_not_exceed_24_characters">Password should not exceed 24 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="login_failed">Login failed</string>
    <string name="doesn_t_work_yet_sorry">Doesn\'t work yet. Sorry!</string>

</resources>