<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:enabled="false"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favorite"
        android:enabled="false"
        android:icon="@drawable/favorite"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/products"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_message"
        android:enabled="false"
        android:icon="@drawable/message"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>
